# defi-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.json  server.py
scripts/: test_aave_position.py  test_raw_request.py
src/defi_mcp/: config.py  server.py
src/defi_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/defi_mcp/lib/: abis.py  chains.py
src/defi_mcp/tools/: aave_position.py  balance.py  price.py  swap.py
tests/: test_connection.py
