[project]
name = "defi-mcp"
version = "0.1.0"
description = "An MCP server giving AI agents access to DeFi data on EVM chains."
authors = [{name = "Matthieu Ratsitohery", email = "matiosera3@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "web3>=7.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/matiosera3-ops/defi-mcp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]